--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -17,7 +17,7 @@
         <a href="{% url "images:list" %}">Images</a>
       </li>
       <li {% if section == "people" %}class="selected"{% endif %}>
-        <a href="#">People</a>
+          <a href="{% url "user_list" %}">People</a>
       </li>
     </ul>
   {% endif %}
@@ -49,7 +49,6 @@
 <script>
   var csrftoken = Cookies.get('csrftoken');
   function csrfSafeMethod(method) {
-    // these HTTP methods do not require CSRF protection
     return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
   }
   $.ajaxSetup({
